Optimisation de la génération d'un exercice modifié